--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.filled-button {
+    @apply bg-summit-700 hover:bg-summit-700/95 rounded-md text-white text-center px-4 py-2;
+}
