--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,5 +3,9 @@
 @tailwind utilities;
 
 .filled-button {
-    @apply bg-summit-700 hover:bg-summit-700/95 rounded-md text-white text-center px-4 py-2;
+  @apply rounded-md bg-summit-700 px-4 py-2 text-center text-white hover:bg-summit-700/95;
+}
+
+.rdp-vhidden {
+  @apply hidden;
 }
